add mini batch version and tensor core version

--- a/v2 mini-batch gd/makefile
+++ b/v2 mini-batch gd/makefile
@@ -2,7 +2,7 @@ CC = nvcc
 # Architecture-specific flags for NVIDIA GPUs
 # Adjust the architecture flag according to your GPU
 # For example, for NVIDIA Turing architecture, use -arch=sm_75
-CFLAGS = -O2 -arch=sm_86 -lcublas
+CFLAGS = -O2 
 
 EXE = nn.exe
 SRC = nn.cu
